Початок 3 етапу  Оновлено API та фронт: додано підтримку dueDate

--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
         <form id="task-form" class="mb-3">
             <input type="text" id="task-name" class="form-control" placeholder="Назва задачі" required>
             <textarea id="task-desc" class="form-control mt-2" placeholder="Опис"></textarea>
+            <input type="date" id="task-date" required>
             <button type="submit" class="btn btn-primary mt-2">Додати задачу</button>
         </form>
         <ul id="task-list" class="list-group"></ul>
