--- a/public/Dashboard.html
+++ b/public/Dashboard.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Всі задачі</title>
+    <title>Dashboard</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 
@@ -22,15 +22,12 @@
 
 
         </form>
-        <h2 class="mt-4 text-center">Фільтри</h2>
-        <input type="date" id="filter-date" class="form-control mt-3">
-        <button onclick="filterTasks()" class="btn btn-secondary mt-2">Фільтрувати по даті</button>
-
-        <h2 class="mt-4 text-center">Список задач</h2>
+        <h2 class="mt-4 text-center">Список сьогоднішніх задач</h2>
         <ul id="task-list" class="list-group"></ul>
 
     </div>
 
-    <script src="tasks.js"></script>
+    <script src="Dashboard.js"></script>
+
 </body>
 </html>
