--- a/public/login.html
+++ b/public/login.html
@@ -1,57 +1,80 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="uk">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Вхід</title>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Вхід</title>
 
+        <link
+            href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+            rel="stylesheet"
+        />
+    </head>
+    <body>
+        <div class="container mt-5">
+            <!-- Вхід -->
+            <h2 class="text-center mb-4">Вхід</h2>
+            <form id="loginForm" class="mb-4">
+                <div class="mb-3">
+                    <input
+                        type="email"
+                        id="email"
+                        class="form-control"
+                        placeholder="Email"
+                        required
+                    />
+                </div>
+                <div class="mb-3">
+                    <input
+                        type="password"
+                        id="password"
+                        class="form-control"
+                        placeholder="Пароль"
+                        required
+                    />
+                </div>
+                <button type="submit" class="btn btn-primary w-100">
+                    Увійти
+                </button>
+            </form>
+            <div id="message"></div>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+            <!-- Статус сесії -->
+            <h2 class="text-center mb-4">Статус сесії</h2>
+            <button id="checkStatusButton" class="btn btn-info w-100">
+                Перевірити статус
+            </button>
+            <div id="statusMessage" class="mt-3"></div>
 
-    <div class="container mt-5">
+            <!-- Вихід -->
+            <h2 class="text-center mb-4">Вихід</h2>
+            <button id="logoutButton" class="btn btn-danger w-100">
+                Вийти
+            </button>
+            <div id="logoutMessage" class="mt-3"></div>
 
-        <!-- Вхід -->
-        <h2 class="text-center mb-4">Вхід</h2>
-        <form id="loginForm" class="mb-4">
-            <div class="mb-3">
-                <input type="email" id="email" class="form-control" placeholder="Email" required>
-            </div>
-            <div class="mb-3">
-                <input type="password" id="password" class="form-control" placeholder="Пароль" required>
-            </div>
-            <button type="submit" class="btn btn-primary w-100">Увійти</button>
-        </form>
-        <div id="message"></div>
+            <!-- Скидання пароля -->
+            <h2 class="text-center mb-4">Скидання пароля</h2>
+            <form id="forgotPasswordForm" class="mb-4">
+                <div class="mb-3">
+                    <input
+                        type="email"
+                        id="forgotEmail"
+                        class="form-control"
+                        placeholder="Введіть email"
+                        required
+                    />
+                </div>
+                <button type="submit" class="btn btn-warning w-100">
+                    Скинути пароль
+                </button>
+            </form>
+            <p id="message" class="text-center"></p>
+        </div>
 
-        <!-- Статус сесії -->
-        <h2 class="text-center mb-4">Статус сесії</h2>
-        <button id="checkStatusButton" class="btn btn-info w-100">Перевірити статус</button>
-        <div id="statusMessage" class="mt-3"></div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
-        <!-- Вихід -->
-        <h2 class="text-center mb-4">Вихід</h2>
-        <button id="logoutButton" class="btn btn-danger w-100">Вийти</button>
-        <div id="logoutMessage" class="mt-3"></div>
-
-        <!-- Скидання пароля -->
-        <h2 class="text-center mb-4">Скидання пароля</h2>
-        <form id="forgotPasswordForm" class="mb-4">
-            <div class="mb-3">
-                <input type="email" id="forgotEmail" class="form-control" placeholder="Введіть email" required>
-            </div>
-            <button type="submit" class="btn btn-warning w-100">Скинути пароль</button>
-        </form>
-        <p id="message" class="text-center"></p>
-
-    </div>
-
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
-
-    <script src="login.js"></script>
-    <script src="forgotPassword.js"></script>
-
-</body>
+        <script src="login.js"></script>
+        <script src="forgotPassword.js"></script>
+    </body>
 </html>
